--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -13,7 +13,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      family="JetBrainsMonoNL Nerd Font"
+font_family      family="Code New Roman Nerd Font Propo"
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -36,6 +36,9 @@ font_size 14.0
 #: Font size (in pts)
 
 # force_ltr no
+
+enable_audio_bell yes
+bell_path "~/.config/kitty/windows-8-1-error-sound.mp3"
 
 #: kitty does not support BIDI (bidirectional text), however, for RTL
 #: scripts, words are automatically displayed in RTL. That is to say,
