--- a/.config/swaync/config.jsonc
+++ b/.config/swaync/config.jsonc
@@ -2,50 +2,51 @@
   "$schema": "/etc/xdg/swaync/configSchema.json",
   "positionX": "right",
   "positionY": "top",
-  "cssPriority": "application",
   "layer": "overlay",
-  "layer-shell": true,
-
-  "control-center-layer": "top",
-  "control-center-width": 330,
-  "control-center-height": 725, 
+  "cssPriority": "application",
+  
+  "control-center-width": 380,
+  "control-center-height": 860, 
   "control-center-margin-top": 2,
   "control-center-margin-bottom": 2,
   "control-center-margin-right": 1,
   "control-center-margin-left": 0,
 
   "notification-window-width": 400,
-  "notification-window-height": 200,
-  "notification-icon-size": 50,
-  "notification-body-image-height": 100,
+  "notification-icon-size": 48,
+  "notification-body-image-height": 160,
   "notification-body-image-width": 200,
-  "notification-2fa-action": true,
-  "notifications-inline-replies": true,
 
   "timeout": 4,
-  "timeout-low": 4,
-  "timeout-critical": 4,
+  "timeout-low": 2,
+  "timeout-critical": 6,
   
   "fit-to-screen": false,
-  "relative-timestamps": true,
   "keyboard-shortcuts": true,
   "image-visibility": "when-available",
   "transition-time": 200,
   "hide-on-clear": false,
   "hide-on-action": true,
   "script-fail-notify": true,
+  "scripts": {
+    "example-script": {
+      "exec": "echo 'Do something...'",
+      "urgency": "Normal"
+    }
+  },
   "widgets": [
-    "mpris",
-    "title",
+    "mpris",  
+    "volume",
     "dnd",
+    "title",
     "notifications"
   ],
 
   "widget-config": {
     "title": {
-      "text": "NOTIFICATIONS",
+      "text": "Notifications",
       "clear-all-button": true,
-      "button-text": "󰩺  CLEAR"
+      "button-text": "🗑"
     },
 
     "dnd": {
@@ -53,8 +54,17 @@
     },
 
     "mpris": {
-      "image-size": 76,
-      "image-radius": 10
+      "image-size": 96,
+      "image-radius": 12
+    },
+    
+    "volume": {
+      "label": "󰕾",
+      "expand-button-label": "",
+      "collapse-button-label": "",
+      "show-per-app": true,
+      "show-per-app-icon": true,
+      "show-per-app-label": true
     }
 
   }
