--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -5,9 +5,9 @@
     "fixed center": true,
     "reload_style_on_change": true,
 	  "height": 42,
-    "width": 600,
+    "width": 700,
     "include": ["~/.config/waybar/modules.jsonc"],
     "modules-left": ["custom/power", "hyprland/workspaces"],
     "modules-center": ["clock"],
-	  "modules-right": ["tray", "hyprland/language", "network"]
+	  "modules-right": ["tray", "network", "pulseaudio", "hyprland/language", "custom/swaync"]
 }
