--- a/.config/waybar/modules.jsonc
+++ b/.config/waybar/modules.jsonc
@@ -75,17 +75,43 @@
         "format-linked": "{ifname} (No IP)",
         "format-disconnected": "󰖪 ",
         "tooltip-format": "Network: <big><b>{essid}</b></big>\nSignal strength: <b>{signaldBm}dBm ({bandwidthDownBytes})</b>\nFrequency: <b>{frequency}MHz</b>\nInterface: <b>{ifname}</b>",
-        "on-click": "/home/$USER/scripts/rofi/wifi-menu.sh"
+        "on-click": "~/.config/scripts/rofi/wifi-menu.sh"
     },
 
-    
+    "pulseaudio": {
+        "format": "{icon}",
+        "format-bluetooth": "{icon}",
+        "format-muted": "",
+        "format-icons": {
+            "alsa_output.pci-0000_00_1f.3.analog-stereo": "",
+            "alsa_output.pci-0000_00_1f.3.analog-stereo-muted": "",
+            "headphones": "",
+            "handsfree": "",
+            "headset": "",
+            "phone": "",
+            "phone-muted": "",
+            "portable": "",
+            "car": "",
+            "default": ["", ""]
+        },
+        "tooltip-format": "{desc}: {volume}%",
+        "scroll-step": 5,
+        "on-click": "pavucontrol"
+    },
+
+    "custom/swaync": {
+        "format": " ",
+        "tooltip": false,
+        "on-click": "swaync-client -t"
+    },
+
 // -------------------------------------------------------------------------
 // System power management
 // -------------------------------------------------------------------------
 
     "custom/power": {
         "format": "", // arch icon
-        "on-click": "/home/$USER/scripts/rofi/powermenu-hypr.sh",
+        "on-click": "~/.config/scripts/rofi/powermenu-hypr.sh",
         "tooltip": false
     },
 }
