--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -67,7 +67,7 @@ general {
     gaps_in = 5
     gaps_out = 20
 
-    border_size = 2
+    border_size = 0
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(ff5555ff) rgba(bd93f9ee) 45deg
@@ -91,6 +91,9 @@ decoration {
     active_opacity = 1.0
     inactive_opacity = 1.0
 
+    dim_inactive = true
+    dim_strength = 0.1
+
     shadow {
         enabled = true
         range = 4 # 12
@@ -102,12 +105,13 @@ decoration {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 2
+        size = 3
         passes = 2
 
         new_optimizations=true
+        popups = false
 
-        vibrancy = 0.1696
+        vibrancy = 0.2
     }
 
     layerrule = blur,waybar
@@ -126,8 +130,6 @@ decoration {
 animations {
     enabled = yes
 
-    # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
     bezier = easeOutQuint,0.23,1,0.32,1
     bezier = easeInOutCubic,0.65,0.05,0.36,1
     bezier = linear,0,0,1,1
@@ -136,7 +138,7 @@ animations {
 
     animation = global, 1, 10, default
     animation = border, 1, 5.39, easeOutQuint
-    animation = windows, 1, 4.79, easeOutQuint
+    animation = windows, 1, 4.79, easeOutQuint, popin
     animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
     animation = windowsOut, 1, 1.49, linear, popin 87%
     animation = fadeIn, 1, 1.73, almostLinear
@@ -147,9 +149,9 @@ animations {
     animation = layersOut, 1, 1.5, linear, fade
     animation = fadeLayersIn, 1, 1.79, almostLinear
     animation = fadeLayersOut, 1, 1.39, almostLinear
-    animation = workspaces, 1, 1.94, almostLinear, fade
-    animation = workspacesIn, 1, 1.21, almostLinear, fade
-    animation = workspacesOut, 1, 1.94, almostLinear, fade
+    animation = workspaces, 1, 2.50, easeInOutCubic, slidefade
+    animation = workspacesIn, 1, 1.51, almostLinear, slide
+    animation = workspacesOut, 1, 2.54, almostLinear, slide
 }
 
 # Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
@@ -306,8 +308,7 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 
 # Example windowrule
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
-windowrule = opacity 0.95 0.85 override,class:^(kitty)$
-windowrule = opacity 0.95 0.85 override,class:^(org.pwmt.zathura)$
+windowrule = opacity 0.90 0.90 override,class:^(org.pwmt.zathura)$
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrule = suppressevent maximize, class:.*
