--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -70,7 +70,7 @@ general {
     border_size = 0
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(ff5555ff) rgba(bd93f9ee) 45deg
+    col.active_border = rgba(ffffffff)
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
