Removed some unnecessary config files, updated shell promt and hyprland config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -235,6 +235,9 @@ bind = $mainMod, F, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
 
+# Reload bar and notification centre 
+bind = $mainMod, R, exec, ~/.config/hypr/reload_stuff.sh
+
 # Take a screenshot of a part of the screen with PrtSc or Ctrl+Shift+S 
 # (loved that win11 bind) and a screenshot of the whole screen with 
 # Ctrl+PrtSc. Screenshots are both saves as files and copied to clipboard
