Enabled terminal cursor animations

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -114,12 +114,12 @@ decoration {
         vibrancy = 0.2
     }
 
-    layerrule = blur,waybar
+    layerrule = blur, waybar
     layerrule = ignorezero, waybar
-    layerrule = blur,rofi
+    layerrule = blur, rofi
     layerrule = ignorezero, rofi
-    layerrule = blur,kitty
-    layerrule = blur, gtk-layer-shell
+    layerrule = blur, kitty
+    # layerrule = blur, gtk-layer-shell
     layerrule = blur, swaync-notification-window
     layerrule = blur, swaync-control-center
     layerrule = ignorezero, swaync-control-center
@@ -226,7 +226,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, C, exec, $terminal
 bind = $mainMod, Q, killactive,
-bind = $mainMod, M, exit,
+# bind = $mainMod, M, exit,
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, D, exec, $telegram
