--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -25,6 +25,8 @@ font_size 16
 
 enable_audio_bell yes
 
+cursor_trail 3
+
 #: kitty does not support BIDI (bidirectional text), however, for RTL
 #: scripts, words are automatically displayed in RTL. That is to say,
 #: in an RTL script, the words "HELLO WORLD" display in kitty as
