--- a/.config/starship.toml
+++ b/.config/starship.toml
@@ -119,7 +119,7 @@ min_time = 2000
 show_milliseconds = false
 
 [python]
-format = '[ ](bold green)[${symbol}${pyenv_prefix}(${version})(\($virtualenv\))]($style) '
+format = '[${symbol}${pyenv_prefix}(${version})(\($virtualenv\))]($style) '
 symbol = '󰌠 ' # 󰌠  🐍 👾  |
 style = 'bright-purple'
 #detect_files = [['.python-version', 'Pipfile', '__init__.py', 'pyproject.toml', 'requirements.txt', 'setup.py', 'tox.ini', 'pixi.toml']]
