--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -70,7 +70,7 @@ general {
     border_size = 0
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(ffffffff)
+    col.active_border = rgba(afeeeeff)
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -96,10 +96,11 @@ decoration {
 
     shadow {
         enabled = true
-        range = 4 # 12
-        render_power = 3
+        range = 15
+        render_power = 2
+        # offset = 2 3
 
-        color = rgba(1a1a1aee)
+        color = rgba(1a1a1aaa)
     }
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
@@ -110,20 +111,15 @@ decoration {
 
         new_optimizations=true
         popups = false
+        ignore_opacity=true
 
         vibrancy = 0.2
     }
 
+    layerrule = ignorezero, .* # no blur on undrendered pixels
     layerrule = blur, waybar
-    layerrule = ignorezero, waybar
-    layerrule = blur, rofi
-    layerrule = ignorezero, rofi
-    layerrule = blur, kitty
-    # layerrule = blur, gtk-layer-shell
     layerrule = blur, swaync-notification-window
     layerrule = blur, swaync-control-center
-    layerrule = ignorezero, swaync-control-center
-    layerrule = ignorezero, swaync-notification-window
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
@@ -312,6 +308,7 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # Example windowrule
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
 windowrule = opacity 0.90 0.90 override,class:^(org.pwmt.zathura)$
+windowrule = noblur override, class:^(?:(?!Rofi|kitty).)*$
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrule = suppressevent maximize, class:.*
