--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -308,10 +308,12 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # Example windowrule
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
 windowrule = opacity 0.90 0.90 override,class:^(org.pwmt.zathura)$
-windowrule = noblur override, class:^(?:(?!Rofi|kitty).)*$
+windowrule = noblur override, class:/(?:\bRofi$)|(?:\bkitty)/
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
 windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+
+# debug:disable_logs = false
