Switched to TUI wifi and bluetooth applets, using wofi instead of rofi now

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -22,7 +22,7 @@ $terminal = kitty
 $fileManager = nautilus
 $browser = firefox
 $telegram = ~/AUR_Packages/Telegram/Telegram
-$menu = rofi -show drun
+$menu = wofi --show drun
 
 
 #################
@@ -96,9 +96,9 @@ decoration {
 
     shadow {
         enabled = true
-        range = 15
+        range = 30
         render_power = 2
-        # offset = 2 3
+        offset = 0 10
 
         color = rgba(1a1a1aaa)
     }
@@ -118,6 +118,7 @@ decoration {
 
     layerrule = ignorezero, .* # no blur on undrendered pixels
     layerrule = blur, waybar
+    layerrule = blur, wofi
     layerrule = blur, swaync-notification-window
     layerrule = blur, swaync-control-center
 }
@@ -308,7 +309,8 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # Example windowrule
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
 windowrule = opacity 0.90 0.90 override,class:^(org.pwmt.zathura)$
-windowrule = noblur override, class:/(?:\bRofi$)|(?:\bkitty)/
+windowrule = noblur, class:^(.*)$
+windowrule = noblur 0 override, class:^(kitty)|(org\.telegram\.desktop.*)|(org.pwmt.zathura)$
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrule = suppressevent maximize, class:.*
