--- a/.config/waybar/modules.jsonc
+++ b/.config/waybar/modules.jsonc
@@ -75,23 +75,22 @@
         "format-linked": "{ifname} (No IP)",
         "format-disconnected": "󰖪 ",
         "tooltip-format": "Network: <big><b>{essid}</b></big>\nSignal strength: <b>{signaldBm}dBm ({bandwidthDownBytes})</b>\nFrequency: <b>{frequency}MHz</b>\nInterface: <b>{ifname}</b>",
-        "on-click": "~/.config/scripts/rofi/wifi-menu.sh"
+        "tooltip-format-ethernet": "Network: <big><b>Ethernet</b></big>\nSignal strength: <b>{signaldBm}dBm ({bandwidthDownBytes})</b>\nFrequency: <b>{frequency}MHz</b>\nInterface: <b>{ifname}</b>",
+        "on-click": "hyprctl dispatch exec [float] kitty impala"
+    },
+
+    "bluetooth": {
+      "format": "",
+      "format-disconnected": "󰂲",
+      "tooltip-format": "Controller: {controller_alias}\nDevice: {device_alias}",
+      "on-click": "hyprctl dispatch exec [float] kitty bluetui"
     },
 
     "pulseaudio": {
         "format": "{icon}",
-        "format-bluetooth": "{icon}",
         "format-muted": "",
         "format-icons": {
-            "alsa_output.pci-0000_00_1f.3.analog-stereo": "",
-            "alsa_output.pci-0000_00_1f.3.analog-stereo-muted": "",
             "headphones": "",
-            "handsfree": "",
-            "headset": "",
-            "phone": "",
-            "phone-muted": "",
-            "portable": "",
-            "car": "",
             "default": ["", ""]
         },
         "tooltip-format": "{desc}: {volume}%",
