refactor: add waybar powermenu

--- a/waybar/modules.jsonc
+++ b/waybar/modules.jsonc
@@ -110,7 +110,14 @@
 
     "custom/power": {
         "format": "", // arch icon
-        "on-click": "~/.config/scripts/rofi/powermenu-hypr.sh",
-        "tooltip": false
-    },
+        "tooltip": false,
+        "menu": "on-click",
+        "menu-file": "~/.config/waybar/power-menu.xml",
+        "menu-actions": {
+            "shutdown": "shutdown",
+            "reboot": "reboot",
+            "suspend": "systemctl suspend",
+            "hibernate": "systemctl hibernate"
+        }
+    }
 }
