refactor: remove unnecessary key binds

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -21,7 +21,7 @@ monitor=,preferred,auto,auto
 $terminal = kitty
 $fileManager = nautilus
 $browser = firefox
-$telegram = ~/AUR_Packages/Telegram/Telegram
+$telegram = Telegram
 $menu = wofi --show drun
 
 
@@ -224,9 +224,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 bind = $mainMod, C, exec, $terminal
 bind = $mainMod, Q, killactive,
 # bind = $mainMod, M, exit,
-bind = $mainMod, B, exec, $browser
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, D, exec, $telegram
 bind = $mainMod, T, togglefloating,
 bind = $mainMod, F, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
@@ -306,11 +304,12 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
-# Example windowrule
-# windowrule = float,class:^(kitty)$,title:^(kitty)$
+# toggle opacity for zathura
 windowrule = opacity 0.90 0.90 override,class:^(org.pwmt.zathura)$
+
+# toggle blur only for zathura and terminal 
 windowrule = noblur, class:^(.*)$
-windowrule = noblur 0 override, class:^(kitty)|(org\.telegram\.desktop.*)|(org.pwmt.zathura)$
+windowrule = noblur 0 override, class:^(kitty)|(org.pwmt.zathura)$
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrule = suppressevent maximize, class:.*
