refactor: add mako notification deamon

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -34,7 +34,7 @@ $menu = wofi --show drun
 
 exec-once = waybar
 exec-once = hyprpaper
-exec-once = swaync -c ~/.config/swaync/config.jsonc
+exec-once = mako -c ~/.config/mako/config
 
 
 #############################
@@ -119,8 +119,7 @@ decoration {
     layerrule = ignorezero, .* # no blur on undrendered pixels
     layerrule = blur, waybar
     layerrule = blur, wofi
-    layerrule = blur, swaync-notification-window
-    layerrule = blur, swaync-control-center
+    layerrule = blur, notifications
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
