refactor: change wallpaper

--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,6 +1,3 @@
-preload = /home/succ_seed/Pictures/Wallpapers/chise.jpg
-preload = /home/succ_seed/Pictures/Wallpapers/furina.jpg
-preload = /home/succ_seed/Pictures/Wallpapers/sanhua.jpg
-preload = /home/succ_seed/Pictures/Wallpapers/rendered_dreamscape.jpg
+preload = ~/Pictures/Wallpapers/WHA.jpg
 
-wallpaper = , /home/succ_seed/Pictures/Wallpapers/chise.jpg
+wallpaper = , ~/Pictures/Wallpapers/WHA.jpg
