refactor: adjust cursor settings

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -45,15 +45,18 @@ exec-once = mako -c ~/.config/mako/config
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
-env = HYPRCURSOR_THEME,Breeze Light
+env = HYPRCURSOR_THEME,MacOS-Tacoe-Cursor
 env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = NVD_BACKEND,direct
 env = ELECTRON_OZONE_PLATFORM_HINT,auto
-env = TERMINAL, kitty
+env = TERMINAL,kitty
+env = NO_HARDWARE_CURSORS,2
+env = INACTIVE_TIMOUT,0
+env = USE_CPU_BUFFER,1
+env = HYPRCURSOR, true
 
 
 #####################
