--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -35,6 +35,7 @@ $menu = wofi --show drun
 exec-once = waybar
 exec-once = hyprpaper
 exec-once = mako -c ~/.config/mako/config
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 
 #############################
@@ -99,9 +100,9 @@ decoration {
 
     shadow {
         enabled = true
-        range = 30
-        render_power = 2
-        offset = 0 10
+        range = 40
+        render_power = 3
+        offset = 0 5
 
         color = rgba(1a1a1aaa)
     }
@@ -109,8 +110,8 @@ decoration {
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
-        passes = 2
+        size = 4
+        passes = 3
 
         new_optimizations=true
         popups = false
@@ -227,6 +228,7 @@ bind = $mainMod, Q, killactive,
 # bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, T, togglefloating,
+bind = $mainMod, T, resizeactive, exact 840 520
 bind = $mainMod, F, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
@@ -305,12 +307,15 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
+# make floating windows smaller
+windowrule = size 800 600 override, floating:1
+
 # toggle opacity for zathura
 windowrule = opacity 0.90 0.90 override,class:^(org.pwmt.zathura)$
 
 # toggle blur only for zathura and terminal 
 windowrule = noblur, class:^(.*)$
-windowrule = noblur 0 override, class:^(kitty)|(org.pwmt.zathura)$
+windowrule = noblur 0 override, class:^(kitty)|(zen)|(org.pwmt.zathura)$
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrule = suppressevent maximize, class:.*
