--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,3 +1,4 @@
 preload = ~/Pictures/Wallpapers/WHA.jpg
+preload = ~/Pictures/Wallpapers/cool-wallpaper.jpeg
 
-wallpaper = , ~/Pictures/Wallpapers/WHA.jpg
+wallpaper = , ~/Pictures/Wallpapers/cool-wallpaper.jpeg
