chore: change color scheme

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -20,11 +20,13 @@ scrollback_lines 10000
 #: Color scheme {{{
 
 foreground #dddddd
-background #24262e
+background #272727
 
 #: The foreground and background colors.
 
-background_opacity 0.90
+background_opacity 0.80
+
+window_margin_width 8
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -93,24 +95,5 @@ selection_background #28344a
 
 # The color for highlighting URLs on mouse-over
 # url_color #9ece6a
-url color #5de4c7
-
-# Window borders
-active_border_color #3d59a1
-inactive_border_color #101014
-bell_border_color #fffac2
-
-# Tab bar
-tab_bar_style fade
-tab_fade 1
-active_tab_foreground   #3d59a1
-active_tab_background   #16161e
-active_tab_font_style   bold
-inactive_tab_foreground #787c99
-inactive_tab_background #16161e
-inactive_tab_font_style bold
-tab_bar_background #101014
-
-# Title bar
-macos_titlebar_color #16161e
+url color #00faff
 
