--- a/fastfetch/config.jsonc
+++ b/fastfetch/config.jsonc
@@ -29,7 +29,7 @@
         "break",
         {
             "type": "os",
-            "key": " ",
+            "key": "󰌽 ",
             "keyColor": "34"  // = color4
         },
         {
@@ -39,7 +39,7 @@
         },
         {
             "type": "packages",
-            "format": "{} (pacman)",
+            "format": "packages: {}",
             "key": " ",
             "keyColor": "34"
         },
