feat: update hyprland config

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -315,7 +315,7 @@ windowrule = opacity 0.90 0.90 override,class:^(org.pwmt.zathura)$
 
 # toggle blur only for zathura and terminal 
 windowrule = noblur, class:^(.*)$
-windowrule = noblur 0 override, class:^(kitty)|(zen)|(org.pwmt.zathura)$
+windowrule = noblur 0 override, class:^(kitty)|(zen)|(org.gnome.Nautilus)|(org.pwmt.zathura)$
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrule = suppressevent maximize, class:.*
