--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,4 +1,3 @@
-preload = ~/Pictures/Wallpapers/WHA.jpg
-preload = ~/Pictures/Wallpapers/cool-wallpaper.jpeg
+preload = ~/Pictures/Wallpapers/totsukuni_no_shoujo.jpg
 
-wallpaper = , ~/Pictures/Wallpapers/cool-wallpaper.jpeg
+wallpaper = , ~/Pictures/Wallpapers/totsukuni_no_shoujo.jpg
