--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -46,7 +46,8 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 
 env = XCURSOR_SIZE,24
 env = HYPRCURSOR_SIZE,24
-env = HYPRCURSOR_THEME,MacOS-Tacoe-Cursor
+env = XCURSOR_THEME,MacOS-Tahoe-Cursor
+env = HYPRCURSOR_THEME,MacOS-Tahoe-Cursor
 env = LIBVA_DRIVER_NAME,nvidia
 env = XDG_SESSION_TYPE,wayland
 env = GBM_BACKEND,nvidia-drm
