feat: update config to hyprland 0.53

--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,3 +1,5 @@
-preload = ~/Pictures/Wallpapers/totsukuni_no_shoujo.jpg
-
-wallpaper = , ~/Pictures/Wallpapers/totsukuni_no_shoujo.jpg
+wallpaper {
+	monitor = 
+	path = ~/Pictures/Wallpapers/totsukuni_no_shoujo.jpg
+	fit_mode = cover
+}
