--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -121,10 +121,8 @@ decoration {
         vibrancy = 0.2
     }
 
-    layerrule = ignorezero, .* # no blur on undrendered pixels
-    layerrule = blur, waybar
-    layerrule = blur, wofi
-    layerrule = blur, notifications
+		layerrule = ignore_alpha 0, match:namespace .*
+    layerrule = blur on, match:namespace ^(waybar)|(notifications)|(wofi)$
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
@@ -308,20 +306,45 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 # See https://wiki.hyprland.org/Configuring/Workspace-Rules/ for workspace rules
 
-# make floating windows smaller
-windowrule = size 800 600 override, floating:1
+# make floating terminal windows smaller
+windowrule = size 800 600 override, match:float 1, match:class ^(kitty)$
 
 # toggle opacity for zathura
-windowrule = opacity 0.90 0.90 override,class:^(org.pwmt.zathura)$
+windowrule = opacity 0.90 0.90 override, match:class ^(org.pwmt.zathura)$
 
 # toggle blur only for zathura and terminal 
-windowrule = noblur, class:^(.*)$
-windowrule = noblur 0 override, class:^(kitty)|(zen)|(org.gnome.Nautilus)|(org.pwmt.zathura)$
-
-# Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
-
-# Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrule = no_blur 1, match:class ^(.*)$
+windowrule = no_blur 0 override, match:class ^(kitty)|(zen)|(org.gnome.Nautilus)|(org.pwmt.zathura)$
 
 # debug:disable_logs = false
+
+windowrule {
+    # Ignore maximize requests from all apps. You'll probably like this.
+    name = suppress-maximize-events
+    match:class = .*
+
+    suppress_event = maximize
+}
+
+windowrule {
+    # Fix some dragging issues with XWayland
+    name = fix-xwayland-drags
+    match:class = ^$
+    match:title = ^$
+    match:xwayland = true
+    match:float = true
+    match:fullscreen = false
+    match:pin = false
+
+    no_focus = true
+}
+
+# Hyprland-run windowrule
+windowrule {
+    name = move-hyprland-run
+
+    match:class = hyprland-run
+
+    move = 20 monitor_h-120
+    float = yes
+}
