feat: add uv support n shi

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -318,13 +318,13 @@ windowrule = no_blur 0 override, match:class ^(kitty)|(zen)|(org.gnome.Nautilus)
 
 # debug:disable_logs = false
 
-windowrule {
-    # Ignore maximize requests from all apps. You'll probably like this.
-    name = suppress-maximize-events
-    match:class = .*
-
-    suppress_event = maximize
-}
+# windowrule {
+#     # Ignore maximize requests from all apps. You'll probably like this.
+#     name = suppress-maximize-events
+#     match:class = .*
+#
+#     suppress_event = maximize
+# }
 
 windowrule {
     # Fix some dragging issues with XWayland
