--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -310,7 +310,7 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 windowrule = size 800 600 override, match:float 1, match:class ^(kitty)$
 
 # toggle opacity for zathura
-windowrule = opacity 0.90 0.90 override, match:class ^(org.pwmt.zathura)$
+# windowrule = opacity 0.80 0.80 override, match:class ^(org.pwmt.zathura)$
 
 # toggle blur only for zathura and terminal 
 windowrule = no_blur 1, match:class ^(.*)$
