feat: change the theme to a more upbeat white

--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,5 +1,5 @@
 wallpaper {
 	monitor = 
-	path = ~/Pictures/Wallpapers/totsukuni_no_shoujo.jpg
+	path = ~/.config/Wallpapers/italy-warm.jpg
 	fit_mode = cover
 }
